# sec-filings-rag

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  pyproject.toml
docs/: architecture.md
docs/adr/: 0001-two-track-cost-optimized-deployment.md  0006-reranker-split-cohere-vs-local.md  0007-in-app-bm25.md  README.md
src/enterprise_rag/: __init__.py  cli.py  config.py
src/enterprise_rag/api/: app.py
src/enterprise_rag/evaluation/: __init__.py
src/enterprise_rag/generation/: __init__.py  chain.py  prompts.py
src/enterprise_rag/ingestion/: __main__.py  chunk.py  edgar.py  parse.py  pipeline.py
src/enterprise_rag/observability/: tracing.py
src/enterprise_rag/retrieval/: __init__.py  bm25.py  embeddings.py  retriever.py  store.py
src/sec_filings_rag/: __init__.py  cli.py  config.py
src/sec_filings_rag/api/: __init__.py  app.py
src/sec_filings_rag/generation/: chain.py  prompts.py
src/sec_filings_rag/ingestion/: __init__.py  __main__.py  chunk.py  edgar.py  parse.py  pipeline.py
src/sec_filings_rag/observability/: __init__.py  tracing.py
src/sec_filings_rag/retrieval/: bm25.py  embeddings.py  fusion.py  rerank.py  retriever.py  store.py
tests/: test_api.py  test_config.py  test_generation.py  test_ingestion.py  test_retrieval.py
ui/: streamlit_app.py
