[project]
name = "enterprise-rag"
version = "0.1.0"
description = "Enterprise RAG over SEC 10-K filings — cost-optimized, observable, production-shaped. Portfolio project."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.12",
    "bm25s>=0.2",
    "httpx>=0.28.1",
    "lancedb>=0.13",
    "langchain-openai>=0.2",
    "lxml>=5.2",
    "numpy>=2.0",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "python-dotenv>=1.0",
    "tiktoken>=0.7",
]

[project.scripts]
enterprise-rag = "enterprise_rag.cli:main"

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ruff>=0.6",
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "mypy>=1.10",
    "pre-commit>=3.7",
]

# ---------------------------------------------------------------------------
# Tooling
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py313"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]  # line length handled by formatter

[tool.ruff.lint.isort]
known-first-party = ["enterprise_rag"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra -q"

[tool.mypy]
python_version = "3.13"
plugins = ["pydantic.mypy"]
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = true
ignore_missing_imports = true
files = ["src"]
